# LogAnalyzer

./: CMakeLists.txt  history.txt
src/: LogAnalyzer.cpp  LogAnalyzer.h  LogEntry.h  log_line_parser.cpp  log_line_parser.h  main.cpp
test/: test.txt  test_edge_cases.txt
